src/test/deca/context/valid/oracle/type_binary_op_boolean.deca
{
    boolean a;
    boolean b;
    a == b;
    a && b;
    a || b;
    a != b;
    true == true;
    false == false;
}