src/test/deca/context/invalid/oracle/use_var_not_decl_with_or_right.deca
{
    bool x;
    x = true||y;
}